--- a/packages/polar-backend-api/package.json
+++ b/packages/polar-backend-api/package.json
@@ -21,7 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "polar-blocks": "0.0.0"
+    "polar-blocks": "0.0.0",
+    "polar-shared": "0.0.0"
   },
   "devDependencies": {
     "@types/mocha": "=9.0.0",
