feat: Upload onboarding PDF for new users as soon as they signup

--- a/packages/polar-firebase-users/package.json
+++ b/packages/polar-firebase-users/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "polar-firebase": "0.0.0",
+    "polar-pdf": "0.0.0",
     "polar-firebase-admin": "0.0.0",
     "polar-firestore-like": "0.0.0",
     "polar-sendgrid": "0.0.0",
