--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -44,7 +44,7 @@
     "@types/react": "=17.0.2",
     "@types/react-dom": "=17.0.2",
     "polar-firebase-browser": "0.0.0",
-    "@testing-library/react": "12.1.2",
+    "@testing-library/react": "=12.1.2",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "pdfjs-dist": "=2.8.250-polar.3",
