I tried to fix the referral screen but it didn't work...

--- a/packages/polar-hooks/firebase.json
+++ b/packages/polar-hooks/firebase.json
@@ -17,6 +17,10 @@
         "destination": "/apps/repository/index.html"
       },
       {
+        "source": "/settings/user-referral",
+        "destination": "/apps/repository/index.html"
+      },
+      {
         "source": "/annotations",
         "destination": "/apps/repository/index.html"
       },
