quick settting update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,6 +130,9 @@
   ],
   //"eslint.workingDirectories": [{ "mode": "auto" }],
   "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": true,
+  "editor.guides.bracketPairsHorizontal": false,
+  "editor.guides.highlightActiveBracketPair": true,
   "files.exclude": {
     ".pytest_cache": true,
     ".pnpm-store": true,
