--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -64,6 +64,8 @@
     "@babel/core": "^7.16.7",
     "@storybook/addon-actions": "^6.4.10",
     "@storybook/addon-essentials": "^6.4.10",
+    "@storybook/builder-webpack5": "6.4.10",
+    "@storybook/manager-webpack5": "6.4.10",
     "@storybook/addon-links": "^6.4.10",
     "@storybook/react": "^6.4.10",
     "@types/amplitude-js": "=7.0.1",
