--- a/packages/polar-firebase-users/package.json
+++ b/packages/polar-firebase-users/package.json
@@ -31,7 +31,9 @@
     "polar-firestore-like": "0.0.0",
     "polar-sendgrid": "0.0.0",
     "polar-shared": "0.0.0",
-    "polar-amplitude-backend": "0.0.0"
+    "polar-amplitude-backend": "0.0.0",
+    "polar-payments-stripe": "0.0.0",
+    "polar-accounts": "0.0.0"
   },
   "peerDependencies": {
     "firebase": "=8.10.0",
