--- a/packages/polar-firebase-browser/package.json
+++ b/packages/polar-firebase-browser/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "karma-structured-json-reporter": "=1.0.1"
+    "karma-structured-json-reporter": "=1.0.1",
+    "polar-backend-api": "0.0.0"
   },
   "dependencies": {
     "firebase": "=8.10.0",
