--- a/packages/polar-playwright/package.json
+++ b/packages/polar-playwright/package.json
@@ -14,6 +14,7 @@
   "author": "Polar",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "=1.18.1"
+    "@playwright/test": "=1.18.1",
+    "playwright-core": "=1.18.1"
   }
 }
